--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,11 +1,11 @@
 .form {
     width: 700px;
     background:
-    radial-gradient(circle farthest-side at 0% 50%,#fb1 23.5%,rgba(240,166,17,0) 0)21px 30px,
-    radial-gradient(circle farthest-side at 0% 50%,#B71 24%,rgba(240,166,17,0) 0)19px 30px,
-    linear-gradient(#fb1 14%,rgba(240,166,17,0) 0, rgba(240,166,17,0) 85%,#fb1 0)0 0,
-    linear-gradient(150deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0) 0,rgba(240,166,17,0) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
-    linear-gradient(30deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0) 0,rgba(240,166,17,0) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
-    linear-gradient(90deg,#B71 2%,#fb1 0,#fb1 98%,#B71 0%)0 0 #fb1;
-    background-size:40px 60px;
+    radial-gradient(circle farthest-side at 0% 50%, #3e7eaf 23.5%, rgba(240, 166, 17, 0) 0) 21px 30px,
+    radial-gradient(circle farthest-side at 0% 50%, #709fbe 24%, rgba(240, 166, 17, 0) 0) 19px 30px,
+    linear-gradient(#3e7eaf 14%, rgba(240, 166, 17, 0) 0, rgba(240, 166, 17, 0) 85%, #3e7eaf 0) 0 0,
+    linear-gradient(150deg, #3e7eaf 24%, #709fbe 0, #709fbe 26%, rgba(240, 166, 17, 0) 0, rgba(240, 166, 17, 0) 74%, #709fbe 0, #709fbe 76%, #3e7eaf 0) 0 0,
+    linear-gradient(30deg, #3e7eaf 24%, #709fbe 0, #709fbe 26%, rgba(240, 166, 17, 0) 0, rgba(240, 166, 17, 0) 74%, #709fbe 0, #709fbe 76%, #3e7eaf 0) 0 0,
+    linear-gradient(90deg, #709fbe 2%, #3e7eaf 0, #3e7eaf 98%, #709fbe 0%) 0 0 #3e7eaf;
+    background-size: 40px 60px;
   }
