--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,3 @@
 .Tilt {
-    background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%); /* w3c */
-  }
+  background: linear-gradient(to right, #003973, #e5e5be);
+}
